# libmental

./: CMakeLists.txt  cleancsv.cpp  config.sh  helpers.h  main.cpp  markov.cpp  markov.h  old.h  testdict.csv  word.h
